--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,9 +13,11 @@ permissions:
   contents: read
 
 jobs:
-  build:
-
-    runs-on: [ubuntu-latest, macos-latest, windows-latest]
+    basic:
+      runs-on: ${{ matrix.os }}
+      strategy:
+        matrix:
+          os: [macos-latest, ubuntu-latest, windows-latest]
 
     steps:
     - uses: actions/checkout@v3
